// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryButton renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#550000",
      "borderRadius": 12,
      "maxWidth": 500,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#FAF0DC",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  >
    Save Changes
  </Text>
</View>
`;

exports[`PrimaryButton shows disabled state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#550000",
      "borderRadius": 12,
      "maxWidth": 500,
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#FAF0DC",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  >
    Disabled
  </Text>
</View>
`;
